--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
   background-attachment: fixed;
   height: 100%;
   overflow-x: hidden;
+  line-height: 1.6;
 }
 
 .all{
@@ -33,8 +34,12 @@ nav{
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 15vh;
+  height: 80px;
   z-index: 10;
+  position: fixed;
+  width: 100%;
+  background-color: rgb(28, 28, 28);
+  box-shadow: 0 2px rgba(0, 0, 0, 0.1);
 }
 
 .brand a{
@@ -45,9 +50,11 @@ nav{
   font-family: 'Frank Ruhl Libre', serif;
   font-weight: 400;
   position: relative;
-  bottom: 2vh;
+  /* bottom: 2vh; */
   z-index: 50;
   white-space: nowrap;
+  margin-bottom: 0;
+  vertical-align: center;
 }
 
 .nav-links{
@@ -57,6 +64,7 @@ nav{
   width: 50%;
   height: 30px;
   z-index: 11;
+  margin-bottom: 0;
 }
 
 li{
@@ -168,7 +176,7 @@ li{
 
 .titles{
   position: absolute;
-  bottom: 300px;
+  bottom: 200px;
   color: rgb(247, 247, 247);
 }
 
@@ -194,7 +202,11 @@ li{
 }
 
 .titles p{
-  font-size: 16.2px;
+  font-size: 18px;
+  letter-spacing: 1.3px;
+  position: relative;
+  left: 13px;
+  /* right: 5px; */
 }
 
 
@@ -206,18 +218,20 @@ li{
   background-repeat: no-repeat;
   border-radius: 0;
   box-shadow: 0px 2px 4px #9b9b9b;
-  height: 272px;
+  height: 300px;
   text-align: center;
 }
 
-#biography-banner p{
-  font-family: 'Roboto', sans-serif;
+.biography-background {
+  height: 300px;
+  width: 100vw;
   position: absolute;
-  top: 21vh;
   left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  top: 80px;
+  object-fit: cover;
+  object-position: bottom;
+  border-radius: 0;
+  box-shadow: 0px 2px 4px #9b9b9b;
 }
 
 #biography-banner h2{
@@ -225,21 +239,24 @@ li{
   font-weight: 300;
   color: rgb(247, 247, 247);    
   position: absolute;
-  top: 27vh;
+  top: 200px;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
 }
 
-.headshot{
+#headshot{
   width: 200px;
-  border: 4px solid rgb(56, 119, 212);
+  border: 2px solid rgb(56, 119, 212);
   border-radius: 100px;
   z-index: 2;
   position: relative;   
-  top: 90px; 
+  top: 230px; 
   background-color: rgb(56, 119, 212);
+}
+.fixed-headshot #headshot{
+
 }
 
 .bio_container{
@@ -255,8 +272,9 @@ li{
 
 .bio_quote{
   text-align: center;
-  margin-top: 120px;
-  margin-bottom: 30px;
+  margin-top: 110px;
+  margin-bottom: 50px;
+  margin-top: 240px;
 }
 
 .bio_quote h2{
@@ -273,7 +291,11 @@ li{
 
 .resume{
   text-align: center;
-  margin: 60px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .resume-pdf{
@@ -282,28 +304,41 @@ li{
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
   font-size: 28px;
+  width: 100px;
   padding: 10px 30px;
   border-radius: 5px;
   background-image: linear-gradient(135deg, rgb(24, 73, 179), rgb(56, 119, 212));
-  box-shadow: 2px 2px 20px #9b9b9b;
+  transition: .3s;
+  /* box-shadow: 2px 2px 20px #9b9b9b; */
 }
 
 .resume a:hover{
   text-decoration: none;
   color: rgb(218, 218, 218);
+  font-size: 30px;
+  box-shadow: 2px 2px 20px #9b9b9b;
+  transition: .3s;
 }
 
+.resume a:active{
+  font-size: 28px;
+}
+
+#footer-aboutMe {
+  bottom: -100px;
+}
 
 /*LESSONS PAGE */
-#academy{
-  background-image: url(img/banner.png);
-  background-size: cover;
-  background-position: 0% 60%;
-  background-repeat: no-repeat;
+.academy-background {
+  height: 300px;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  top: 80px;
+  object-fit: cover;
+  object-position: 50% 70%;
   border-radius: 0;
   box-shadow: 0px 2px 4px #9b9b9b;
-  height: 300px;
-  text-align: center;
 }
 
 .jumbotron h1{
@@ -311,23 +346,38 @@ li{
   padding: 30px;
   color: rgb(247, 247, 247);
   background-color: rgba(235, 235, 235, 0.4);
-  border: solid white 10px;
+  border: solid rgb(247, 247, 247) 10px;
+  /* border: solid rgb(255, 172, 66) 10px; */
   white-space: pre-line;
   position: relative;
-  top: 20px;
+  top: 95px;
   font-weight: 400;
   font-family: 'IBM Plex Serif', serif;
   font-style: italic;
   font-size: 48px;
   letter-spacing: 2px;
   word-break: break-all;
+  transition: transform .5s;
+}
+.fixed-logo #academy-logo{
+  position: fixed;
+  transform: scale(0.4);
+  margin-left: 20px;
+  top: 40px;
+  left: -100px;
+  word-spacing: 7em;
+  width: 400px;
+}
+.unfix-logo #academy-logo{
+  position: relative;
 }
 
 .lessons{
   text-align: center;
-  max-width: 48%;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 100px;
+  max-width: 48%;
 }
 
 .lessons h2, p{
@@ -346,12 +396,14 @@ li{
   padding-bottom: 20px;
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+  position: relative; 
+  right: 20px;
 }
 
 .poster{
   text-align: center;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 
 .poster img{
@@ -458,10 +510,16 @@ textarea:focus{
 
 
 /*MEDIA*/
-#media{
-  background-image: url(img/gallery9.png);
-  background-position: 0% 35%;
+.media-background {
   height: 300px;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  top: 80px;
+  object-fit: cover;
+  object-position: 50% 40%;
+  border-radius: 0;
+  box-shadow: 0px 2px 4px #9b9b9b;
 }
 
 #media h2{
@@ -592,6 +650,18 @@ textarea:focus{
   opacity: 0.65;
 }
 
+.slider-button-reset{
+  opacity: 0.65;
+  height: 5px;
+  background-color: red;
+}
+
+.slider-button-active{
+  opacity: 1;
+  height: 5.5px;
+  background-color: rgb(255, 255, 255);
+}
+
 .slider-button:hover{
   cursor: pointer;
 }
@@ -629,54 +699,27 @@ textarea:focus{
   opacity: 1.0;
 }
 
-/* #slider-image-1:target ~ .image-container{
-  left: 0px;
-}
-#slider-image-2:target ~ .image-container{
-  left: -600px;
-}
-#slider-image-3:target ~ .image-container{
-  left: -1200px;
-}
-#slider-image-4:target ~ .image-container{
-  left: -1800px;
-}
-#slider-image-5:target ~ .image-container{
-  left: -2400px;
-}
-#slider-image-6:target ~ .image-container{
-  left: -3000px;
-}
-#slider-image-7:target ~ .image-container{
-  left: -3600px;
-}
-#slider-image-8:target ~ .image-container{
-  left: -4200px;
-}
-#slider-image-9:target ~ .image-container{
-  left: -4800px;
-}
-#slider-image-10:target ~ .image-container{
-  left: -5400px;
-}
-#slider-image-11:target ~ .image-container{
-  left: -6000px;
-} */
-
-
 .credit h4{
   color: rgb(247, 247, 247);
   text-align: center;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
+  margin-bottom: 30px;
 }
 
 /* DOWNLOADS */
 
-#downloads{
-  background-image: url(img/gallery11.png);
-  background-position: bottom;
+
+.downloads-background {
   height: 300px;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  top: 80px;
+  object-fit: cover;
+  object-position: bottom;
+  border-radius: 0;
+  box-shadow: 0px 2px 4px #9b9b9b;
 }
 
 #downloads h2{
@@ -691,11 +734,32 @@ textarea:focus{
   color: rgb(247, 247, 247);
 }
 
+.coming-soon {
+  position: relative;
+  top: 80px;
+  color: white;
+  text-align: center;
+  font-weight: 300;
+}
+
 /* CONTACT */
 #contact{
   background-image: url(img/skyline.jpg);
   height: 300px;
 }
+
+.contact-background {
+  height: 300px;
+  width: 100vw;
+  position: absolute;
+  left: 0;
+  top: 80px;
+  object-fit: cover;
+  object-position: 0% 50%;
+  border-radius: 0;
+  box-shadow: 0px 2px 4px #9b9b9b;
+}
+
 .jumbotron{
   border-radius: 0;
   background-repeat: no-repeat;
@@ -709,7 +773,7 @@ textarea:focus{
 
 .contact_me{
   text-align: center;
-  width: 48%;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -717,10 +781,9 @@ textarea:focus{
 .contact_me h2, p{
   color: rgb(247, 247, 247);
   padding-bottom: 30px;
-
 }
 
-.contact_me h2{
+div .contact_me h2{
   position: absolute;
   left: 0;
   right: 0;
@@ -731,15 +794,23 @@ textarea:focus{
   font-weight: 300;
 }
 
-.contact_me p{
+#contact-form p{
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+  position: relative;
+  right: 20px;
+}
+
+#contact-form {
+  position: relative;
+  top: 420px;
 }
 
 #map{
   height: 400px;
   width: 78%;
   position: relative;
+  top: 400px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
@@ -771,6 +842,10 @@ textarea:focus{
   text-align: center;
 }
 
+#footer-contact {
+  bottom: -430px;
+}
+
 .social{
   position: relative;
   top: 15px;
@@ -796,10 +871,11 @@ textarea:focus{
 }
 
 
-.copy{
+footer .copy{
   position: relative;
   top: 25px;
   white-space: pre-wrap;
+  padding-bottom: 0;
 }
 
 .footer p{
@@ -865,23 +941,35 @@ textarea:focus{
     width: 550px;
     left: 150px;
     right: 0px;
+    bottom: -90px;
     margin-left: auto;
     margin-right: auto;
   }
   .titles{
     position: relative;
-    top: 0px;
-  }  
+    top: 90px;
+  }
+  .footer_home{
+    height: 90px;
+    width: 100%;
+    position: absolute;
+    bottom: -90px;
+    background-color: rgb(28, 28, 28);
+    justify-content: center;
+    color: rgb(247, 247, 247);
+    border-top: 1px solid rgb(247, 247, 247);
+    text-align: center;
+  }    
 
   /* LESSONS */
   #academy{
     background-position: 80% 60%;
-    height: 350px;
+    height: 300px;
   }
   #academy h1{
     width: 400px;
     word-spacing: 5em;
-    top: -15px;
+    top: 40px;
   }
   .lessons h2{
     font-size: 28px;
